2005-02-07  Eric B. Weddington  <ericw@evcohs.com>

    * doc/api/main_page.dox: Remove the untested label on devices list.

2005-02-07  Eric B. Weddington  <ericw@evcohs.com>

    * doc/examples/twitest/twitest.c: Replace SYSCLK with F_CPU.
    [Fixes bug #11817]
    * NEWS: Update bugs fixed list.

2005-02-01  Eric B. Weddington  <ericw@evcohs.com>

    * libm/fplib/sin.S: Fix call to __fp_cosinus.
    [Fixes bug #11805]
    * NEWS: Update bugs fixed list.

2005-01-27  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/examples/Makefile.am (EXTRA_DIST): add all-demos.dox.

2005-01-25  Eric B. Weddington  <ericw@evcohs.com>

    * doc/examples/progmem.c: Update to use the latest API.
    [Fixes bug #11732]
    * NEWS: Update bugs fixed list.

2005-01-24  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libc/stdlib/strtol.c: Dmitry Xmelkov's fixes and speedups
	for strtol and strtoul (check base against legal values,
	correctly report ERANGE on under-/overflow, avoid costly
	division for common base values, parse string "0x" correctly
	as 0 with returning the "x" as final string); bugfix for
	savannah bug  #11494, and savannah patch #3618.
	* libc/stdlib/strtoul.c: Ditto.
	* AUTHORS: Mention Dmitry Xmelkov for his contribution.

2005-01-24  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/acknowledge.dox: Mention Ted Roth, fix Eric's
	email address.
	* doc/api/tools-install.dox: Remove all explicit version
	numbers, recommend the latest released version instead.
	* doc/api/faq.dox: minor cleanup to the ROM string example.

2005-01-23  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libc/stdlib/realloc.c: Do not mess with "nx" pointers for
	the current entry as it is not really of struct __freelist.
	Fixes savannah bug #11684.

2005-01-18  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Implement savannah patch #3516: %S format for printf().
	* AUTHORS: Mention Helmut Wallner for his contribution.
	* include/stdio.h: Document the new %S format.