@@ -4,6 +4,8 @@
 
   [#11805] Fix call to __fp_cosinus in sin().
   [#11817] Replace SYSCLK with F_CPU in twitest example.
+  [#11868] realloc doesn't work correctly on block at end of freelist
+           when growing
 
 *** Changes since avr-libc-1.2.0:
 
